c_lib/source/include/libphonenumber_sys_c_phonemetadata.h

LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_pager(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_personal_number(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_preferred_extn_prefix(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_preferred_international_prefix(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_premium_rate(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_same_mobile_and_fixed_line_pattern(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_shared_cost(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_short_code(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_standard_rate(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_toll_free(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_uan(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_voicemail(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_voip(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_id(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_international_prefix(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_intl_number_format_index(const i18n::phonenumbers::PhoneMetadata* this_ptr, int index);
LIBPHONENUMBER_SYS_C_EXPORT const google::protobuf::RepeatedPtrField< i18n::phonenumbers::NumberFormat >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_intl_number_format_no_args(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT int libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_intl_number_format_size(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_leading_digits(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_leading_zero_possible(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_main_country_for_code(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mobile(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT bool libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mobile_number_portable_region(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_carrier_specific(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_emergency(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_fixed_line(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_general_desc(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_id(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_international_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_intl_number_format_index(i18n::phonenumbers::PhoneMetadata* this_ptr, int index);
LIBPHONENUMBER_SYS_C_EXPORT google::protobuf::RepeatedPtrField< i18n::phonenumbers::NumberFormat >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_intl_number_format_no_args(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_leading_digits(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_mobile(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_national_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_national_prefix_for_parsing(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_national_prefix_transform_rule(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_no_international_dialling(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::NumberFormat* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_number_format_index(i18n::phonenumbers::PhoneMetadata* this_ptr, int index);
LIBPHONENUMBER_SYS_C_EXPORT google::protobuf::RepeatedPtrField< i18n::phonenumbers::NumberFormat >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_number_format_no_args(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_pager(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_personal_number(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_preferred_extn_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_preferred_international_prefix(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_premium_rate(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_shared_cost(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_short_code(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_standard_rate(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_toll_free(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_uan(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_unknown_fields(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_voicemail(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneNumberDesc* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_voip(i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_national_prefix(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_national_prefix_for_parsing(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT const std::__cxx11::basic_string< char, std::char_traits< char >, std::allocator< char > >* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_national_prefix_transform_rule(const i18n::phonenumbers::PhoneMetadata* this_ptr);
LIBPHONENUMBER_SYS_C_EXPORT i18n::phonenumbers::PhoneMetadata* libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_new_from(const i18n::phonenumbers::PhoneMetadata* from);