src/ffi.rs

  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_pager(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_personal_number(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_preferred_extn_prefix(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_preferred_international_prefix(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_premium_rate(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_same_mobile_and_fixed_line_pattern(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_shared_cost(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_short_code(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_standard_rate(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_toll_free(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_uan(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_voicemail(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_has_voip(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_id
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_international_prefix
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_intl_number_format_index
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     index: libc::c_int)
     -> *const ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_intl_number_format_no_args
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::repeated_field::google::protobuf::RepeatedPtrFieldNumberFormatRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_intl_number_format_size(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> libc::c_int;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_leading_digits
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_leading_zero_possible(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_main_country_for_code(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mobile
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mobile_number_portable_region(this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata) -> bool;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_carrier_specific
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_emergency
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_fixed_line
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_general_desc
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_id
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_international_prefix
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_intl_number_format_index
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     index: libc::c_int)
     -> *mut ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_intl_number_format_no_args
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::repeated_field::google::protobuf::RepeatedPtrFieldNumberFormatRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_leading_digits
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_mobile
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_national_prefix
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_national_prefix_for_parsing
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_national_prefix_transform_rule
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_no_international_dialling
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_number_format_index
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata,
     index: libc::c_int)
     -> *mut ::phonemetadata::i18n::phonenumbers::NumberFormat;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_number_format_no_args
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::repeated_field::google::protobuf::RepeatedPtrFieldNumberFormatRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_pager
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_personal_number
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_preferred_extn_prefix
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_preferred_international_prefix
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_premium_rate
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_shared_cost
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_short_code
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_standard_rate
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_toll_free
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_uan
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_unknown_fields
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_voicemail
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_mutable_voip
    (this_ptr: *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneNumberDesc;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_national_prefix
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_national_prefix_for_parsing
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_national_prefix_transform_rule
    (this_ptr: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *const ::basic_string::std::cxx11::BasicStringCCharCharTraitsCCharRefAllocatorCCharRef;
  pub fn libphonenumber_sys_c_i18n_phonenumbers_PhoneMetadata_new_from
    (from: *const ::phonemetadata::i18n::phonenumbers::PhoneMetadata)
     -> *mut ::phonemetadata::i18n::phonenumbers::PhoneMetadata;
